--- a/apps/web-rewards/src/app/page.module.css
+++ b/apps/web-rewards/src/app/page.module.css
@@ -12,6 +12,19 @@
 .section-container {
   display: flex;
   flex-direction: column;
-  width: 800px;
-  max-width: 80dvw;
+  gap: 15px;
+}
+
+.border-detail-container {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 16px;
+}
+
+.border-detail {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+  max-width: 600px;
 }
