--- a/apps/web-rewards/src/auth/components/btn-login/btn-login.module.css
+++ b/apps/web-rewards/src/auth/components/btn-login/btn-login.module.css
@@ -1,10 +1,13 @@
 .container {
-  align-items: center;
   background-color: var(--ui-kit-twitch) !important;
-  display: flex;
-  justify-content: center;
-  gap: 10px;
   &:not(:disabled):hover {
     background-color: var(--ui-kit-twitch-dark) !important;
   }
+}
+
+.detail {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
 }
