--- a/apps/web-rewards/src/rewards/components/user-ranking/user-ranking.module.css
+++ b/apps/web-rewards/src/rewards/components/user-ranking/user-ranking.module.css
@@ -1,7 +1,6 @@
 .container {
   align-self: center;
   border-radius: 6px;
-  background-color: var(--ui-kit-primary-700);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   display: grid;
   grid-template-columns: auto 1fr auto;
@@ -9,6 +8,59 @@
   gap: 15px;
   padding: 10px 26px;
   width: 100%;
+}
+
+.rank-challenger {
+  background-image: linear-gradient(
+    45deg,
+    #fad168ff 10%,
+    #fdfa83ff 15%,
+    #be7f2aff 65%,
+    #74390eff 100%
+  );
+}
+
+.rank-master {
+  background-image: linear-gradient(
+    45deg,
+    #becfc9ff 5%,
+    #465c54ff 10%,
+    #b39480ff 25%,
+    #463426ff 45%,
+    #f5df81ff 100%
+  );
+}
+
+.rank-diamond {
+  background-image: linear-gradient(
+    45deg,
+    #e1d2a2ff 0%,
+    #bb967aff 20%,
+    #b3d1f0ff 55%,
+    #5da3d5ff 70%,
+    #2f288aff 100%
+  );
+}
+
+.rank-platinium {
+  background-image: linear-gradient(
+    45deg,
+    #e8faeaff 0%,
+    #ebdd9cff 20%,
+    #4b441bff 60%,
+    #4f979eff 90%,
+    #1a3332ff 100%
+  );
+}
+
+.rank-gold {
+  background-image: linear-gradient(
+    45deg,
+    #c79f45ff 0%,
+    #855527ff 30%,
+    #48100bff 60%,
+    #a10501ff 100%
+  );
 }
 
 .icon-rank {
