fix(web-rewards): layout grid order elements

--- a/apps/web-rewards/src/app/layout.module.css
+++ b/apps/web-rewards/src/app/layout.module.css
@@ -1,6 +1,7 @@
 .container {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-auto-flow: row;
+  grid-template-rows: auto 1fr auto;
   flex: 1;
   height: 100%;
   width: 100%;
