--- a/apps/web-rewards/src/app/ranking/page.module.css
+++ b/apps/web-rewards/src/app/ranking/page.module.css
@@ -1,6 +1,7 @@
 .container {
+  align-items: center;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   height: 100%;
   width: 100%;
 }
