--- a/apps/web-rewards/src/app/ranking/page.module.css
+++ b/apps/web-rewards/src/app/ranking/page.module.css
@@ -5,3 +5,11 @@
   height: 100%;
   width: 100%;
 }
+
+.section-container {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 45px 15px;
+}
