--- a/apps/web-rewards/src/app/user/id/page.module.css
+++ b/apps/web-rewards/src/app/user/id/page.module.css
@@ -1,9 +1,19 @@
 .container {
-  justify-content: center;
   display: flex;
   height: 100%;
   width: 100%;
   padding: 25px;
+  gap: 15px;
+}
+
+.profile-container {
+  background-color: var(--ui-kit-neutral-800);
+  border-radius: 10px;
+  outline: 2px var(--ui-kit-secondary-400) solid;
+  padding: 25px;
+  height: fit-content;
+  min-width: 400px;
+  max-width: 550px;
 }
 
 .borders-section {
@@ -11,5 +21,5 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  width: 90%;
+  width: 80%;
 }
