--- a/apps/web-rewards/src/users/components/search-users/search-users.module.css
+++ b/apps/web-rewards/src/users/components/search-users/search-users.module.css
@@ -15,3 +15,15 @@
 .avatar {
   border-radius: 50%;
 }
+
+.icon-search {
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none;
+}
+
+.input-search {
+  padding-left: 45px;
+}
