--- a/apps/web-rewards/src/borders/components/list-borders/list-borders.module.css
+++ b/apps/web-rewards/src/borders/components/list-borders/list-borders.module.css
@@ -1,7 +1,46 @@
 .container {
+  align-items: center;
   display: flex;
-  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: column;
   gap: 25px;
   height: 100%;
   width: 100%;
+}
+
+ul {
+  gap: 25px;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  height: 100%;
+  width: 100%;
+}
+
+.input-search {
+  padding-left: 45px;
+  width: 100%;
+}
+
+.input-search-container {
+  position: relative;
+  height: fit-content;
+  width: 80%;
+  max-width: 450px;
+  width: 100%;
+}
+
+.icon-search {
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.not-found-container {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 45px;
+  height: 100%;
 }
