--- a/apps/web-rewards/src/borders/components/list-borders/form-search/form-search.module.css
+++ b/apps/web-rewards/src/borders/components/list-borders/form-search/form-search.module.css
@@ -1,7 +1,7 @@
 .form-search {
-  align-items: flex-start;
+  align-items: center;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   position: relative;
   gap: 25px;
   width: 100%;
@@ -50,4 +50,18 @@
   width: 80%;
   max-width: 450px;
   width: 100%;
+}
+
+.radio-btn-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.radio-btn-section {
+  align-items: center;
+  display: flex;
+  gap: 15px;
+  justify-content: center;
 }
