--- a/apps/web-rewards/src/users/components/user-profile/user-profile.module.css
+++ b/apps/web-rewards/src/users/components/user-profile/user-profile.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   height: fit-content;
+  position: relative;
   width: 100%;
 }
 
@@ -21,4 +22,23 @@
 .icon-unranked {
   height: 80px;
   width: 65px;
+}
+
+.nav-link {
+  background-color: var(--ui-kit-primary-500);
+  color: var(--ui-kit-neutral-100);
+  border-radius: 4px;
+  padding: 8px 16px;
+  outline: 2px solid var(--ui-kit-neutral-100);
+  text-decoration: none;
+  font-weight: var(--ui-kit-font-weight-bold);
+  font-family: var(--ui-kit-font-primary);
+  position: absolute;
+  font-size: 16px;
+  top: 0;
+  left: 0;
+  transition: all 200ms ease-in-out;
+  &:hover {
+    background-color: var(--ui-kit-primary-700);
+  }
 }
