--- a/apps/web-rewards/src/app/user/id/page.module.css
+++ b/apps/web-rewards/src/app/user/id/page.module.css
@@ -26,7 +26,7 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  width: 80%;
+  width: fit-content;
 }
 
 @media screen and (max-width: 850px) {
