--- a/apps/web-rewards/src/shared/components/collaborator/collaborator.module.css
+++ b/apps/web-rewards/src/shared/components/collaborator/collaborator.module.css
@@ -1,7 +1,21 @@
 .avatar {
   border-radius: 50%;
+  transition: all 300ms ease-in-out;
+  width: 40px;
+  height: 40px;
 }
 
 .nav-link {
+  align-items: center;
+  display: flex;
   text-decoration: none;
+  justify-content: center;
+  height: 50px;
+  width: 50px;
+}
+
+.nav-link:hover .avatar {
+  box-shadow: var(--ui-kit-primary-700) 0px 5px 15px;
+  width: 50px;
+  height: 50px;
 }
