--- a/apps/web-rewards/src/app/user/id/page.module.css
+++ b/apps/web-rewards/src/app/user/id/page.module.css
@@ -24,7 +24,9 @@
 .borders-section {
   display: flex;
   flex-wrap: wrap;
-  width: fit-content;
+  min-height: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 @media screen and (max-width: 850px) {
