--- a/apps/web-rewards/src/borders/components/list-borders/list-borders.module.css
+++ b/apps/web-rewards/src/borders/components/list-borders/list-borders.module.css
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  position: relative;
   gap: 25px;
   height: 100%;
   width: 100%;
