feat(embee-links): :sparkles: create banner image component

--- a/apps/embee-links/src/components/embee-banner/index.astro
+++ b/apps/embee-links/src/components/embee-banner/index.astro
@@ -19,7 +19,7 @@ const { url, lettersUrl, name, color } = Astro.props;
     width={260}
     height={104}
     alt={`Letras ${name}`}
-    id="dynamic-image"
+    inferSize
   />
   <slot />
 </a>
@@ -46,29 +46,3 @@ const { url, lettersUrl, name, color } = Astro.props;
     margin-left: 24px;
   }
 </style>
-
-<script>
-  const imageElement = document.getElementById("dynamic-image");
-  const linkContainer = document.getElementById("link-container");
-
-  if (imageElement && linkContainer) {
-    const observer = new IntersectionObserver(
-      (entries) => {
-        entries.forEach((entry) => {
-          if (entry.isIntersecting) {
-            if (imageElement instanceof HTMLImageElement) {
-              imageElement.loading = "eager";
-            }
-            observer.disconnect();
-          }
-        });
-      },
-      {
-        rootMargin: "0px",
-        threshold: 0.1,
-      },
-    );
-
-    observer.observe(linkContainer);
-  }
-</script>
