--- a/apps/embee-links/src/pages/index.astro
+++ b/apps/embee-links/src/pages/index.astro
@@ -3,6 +3,7 @@ import { BaseLayout } from "@layouts/base-layout";
 import { Image } from "astro:assets";
 import { DonationsDetail } from "./_Sections/donations-detail";
 import { EmbeeDetail } from "./_Sections/embee-detail";
+import { ProyectsDetail } from "./_Sections/proyects-detail";
 import { SocialNetworks } from "./_Sections/social-networks";
 import { SponsorsDetail } from "./_Sections/sponsors-detail";
 ---
@@ -13,6 +14,7 @@ import { SponsorsDetail } from "./_Sections/sponsors-detail";
     <SocialNetworks />
     <SponsorsDetail />
     <DonationsDetail />
+    <ProyectsDetail />
     <Image
       class="shaco-dance"
       src="https://embee-org.github.io/embee-statics/gifs/shaco-dance.gif"
