feat(embee-links): :sparkles: change title proyects detail section

--- a/apps/embee-links/src/pages/_Sections/proyects-detail/index.astro
+++ b/apps/embee-links/src/pages/_Sections/proyects-detail/index.astro
@@ -5,7 +5,9 @@ import { Image } from "astro:assets";
 ---
 
 <SectionPage styleInline="gap: 60px">
-  <h2>Puedes ayudarnos visitando y participando de otros proyectos</h2>
+  <h2>
+    Puedes ayudarnos visitando y participando de los siguientes proyectos:
+  </h2>
   <Tooltip message="Recompensas Twitch">
     <a href="https://rewards.embeejayz.com" class="nav-link" target="_blank">
       <Image
