--- a/apps/embee-arena/src/style.css
+++ b/apps/embee-arena/src/style.css
@@ -1,13 +1,16 @@
-@import url("https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	background-color: #000;
-	font-family: "Pixelify Sans", sans-serif;
-	height: 100dvh;
-	width: 100dvw;
-	margin: 0;
+  align-items: flex-end;
+  display: flex;
+  background-color: #000;
+  font-family: 'Pixelify Sans', sans-serif;
+  flex: 1;
+  height: 100%;
+  width: 100%;
+  margin: 0;
 }
