feat(embee-links): :sparkles: add style scrollbar modify avatar and add keywords layout

--- a/apps/embee-links/src/components/avatar-user/index.astro
+++ b/apps/embee-links/src/components/avatar-user/index.astro
@@ -5,9 +5,9 @@ import { Image } from "astro:assets";
 <div>
   <Image
     class="avatar"
-    src="https://embee-org.github.io/embee-statics/images/embee/avatar.jpg"
-    loading={"eager"}
-    height={150}
+    src="https://embee-org.github.io/embee-statics/images/embee/avatar-2.png"
+    loading="eager"
+    height={180}
     width={150}
     alt="Embeejayz Avatar"
   />
@@ -24,9 +24,7 @@ import { Image } from "astro:assets";
     width: 100%;
   }
   .avatar {
-    border-radius: 50%;
-    height: 150px;
-    width: 150px;
+    border-radius: 6px;
   }
   h2 {
     font-weight: 800;
