--- a/apps/embee-links/src/layouts/base-layout/index.astro
+++ b/apps/embee-links/src/layouts/base-layout/index.astro
@@ -23,7 +23,7 @@ const { title } = Astro.props;
     />
     <meta
       name="keywords"
-      content="embeejayz, twitch, twitter, patreon, t1, skt, skt t1, faker, league of legends, lol"
+      content="embeejayz, twitch, twitter, patreon, t1, skt, skt t1, lck, worlds, msi, faker, league of legends, lol, x, youtube, patreon, streamlabs"
     />
     <meta name="author" content="Gountzjs" />
     <meta property="og:image" content="/avatar-embee.jpg" />
