--- a/apps/embee-links/src/styles/global.css
+++ b/apps/embee-links/src/styles/global.css
@@ -2,7 +2,17 @@
 
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
+
+html,
+body {
+  scrollbar-gutter: stable;
+  margin: 0;
+  scrollbar-color: var( --primary) var(--bg-color);
+  scrollbar-width: thin;
+}
+
 
 body {
   background-color: var(--bg-color);
