--- a/apps/migration-rewards/src/app/_sections/navbar/navbar.module.css
+++ b/apps/migration-rewards/src/app/_sections/navbar/navbar.module.css
@@ -31,6 +31,14 @@
   }
 }
 
+.nav-link-active {
+  cursor: default;
+  color: var(--ui-kit-secondary-400);
+  &:hover {
+    color: var(--ui-kit-secondary-400);
+  }
+}
+
 .avatar {
   border-radius: 50%;
   height: fit-content;
