--- a/apps/migration-rewards/src/app/_sections/rewards-available/rewards-available.module.css
+++ b/apps/migration-rewards/src/app/_sections/rewards-available/rewards-available.module.css
@@ -33,7 +33,9 @@
   padding-bottom: 25px;
 }
 
-.border-img {
+.border-container {
+  align-self: center;
+  justify-self: center;
   grid-column: 1/2;
   width: 100%;
 }
@@ -57,8 +59,28 @@
   width: 100%;
 }
 
+.twitch-link {
+  background-color: var(--ui-kit-twitch);
+  color: var(--ui-kit-neutral-100);
+  border-radius: 6px;
+  padding: 8px 16px;
+  display: flex;
+  font-size: 16px;
+  font-weight: 600;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  text-decoration: none;
+  height: fit-content;
+  width: fit-content;
+  transition: background-color 400ms ease-in-out;
+  &:hover {
+    background-color: var(--ui-kit-twitch-dark);
+  }
+}
+
 @media screen and (max-width: 700px) {
-  .border-img {
+  .border-container {
     grid-column: 1/3;
   }
   .border-detail {
