--- a/apps/migration-rewards/src/app/globals.css
+++ b/apps/migration-rewards/src/app/globals.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 :root {
   /* Color Primary */
   --ui-kit-primary-50: #fff0f3;
@@ -74,6 +72,7 @@
   scroll-behavior: smooth;
 }
 
+html,
 body {
   scrollbar-gutter: stable;
   margin: 0;
@@ -81,16 +80,20 @@ body {
   scrollbar-width: thin;
 }
 
-html,
 body {
   background-image: linear-gradient(
     to bottom,
-    var(--ui-kit-neutral-700) 15%,
+    var(--ui-kit-neutral-700),
     var(--ui-kit-neutral-800),
     var(--ui-kit-neutral-900),
     var(--ui-kit-neutral-950)
   );
-  background-position: center;
   background-size: cover;
+  background-position: center;
   color: var(--ui-kit-neutral-100);
+  display: flex;
+  flex: 1;
+  height: 100%;
+  min-height: 100dvh;
+  width: 100%;
 }
