--- a/apps/migration-rewards/src/app/_sections/rewards-available/rewards-available.module.css
+++ b/apps/migration-rewards/src/app/_sections/rewards-available/rewards-available.module.css
@@ -30,7 +30,9 @@
 .border-title {
   grid-column: 1/3;
   margin: 0;
+  font-size: 20px;
   padding-bottom: 25px;
+  font-weight: 700;
 }
 
 .border-container {
@@ -60,7 +62,7 @@
 }
 
 .twitch-link {
-  background-color: var(--ui-kit-twitch);
+  background-color: var(--ui-kit-twitch-dark);
   color: var(--ui-kit-neutral-100);
   border-radius: 6px;
   padding: 8px 16px;
@@ -73,9 +75,9 @@
   text-decoration: none;
   height: fit-content;
   width: fit-content;
-  transition: background-color 400ms ease-in-out;
+  transition: scale 300ms ease-in-out;
   &:hover {
-    background-color: var(--ui-kit-twitch-dark);
+    scale: 1.1;
   }
 }
 
