--- a/apps/web-rewards/src/app/layout.module.css
+++ b/apps/web-rewards/src/app/layout.module.css
@@ -1,9 +1,5 @@
 .container {
-  display: grid;
-  grid-auto-flow: row;
-  grid-template-rows: auto 1fr auto;
-  min-height: 100dvh;
-  height: 100%;
+  height: 100dvh;
   width: 100%;
 }
 
