Revert "feat(web-rewards): :fire: disable page mantainer"
This reverts commit 2a51c96d99743c1f8a6ff1a8dc8d5013b5a8e99a.

--- a/apps/web-rewards/src/app/layout.module.css
+++ b/apps/web-rewards/src/app/layout.module.css
@@ -1,5 +1,9 @@
 .container {
-  height: 100dvh;
+  display: grid;
+  grid-auto-flow: row;
+  grid-template-rows: auto 1fr auto;
+  min-height: 100dvh;
+  height: 100%;
   width: 100%;
 }
 
